tests/paczka1/fuzzy1/48998989.err
Error in line 2: E0b754kc6u A494 32,4
Error in line 4: DWHjW97rUZ A13 4,9
Error in line 7: DWHjW97rUZ S128 87,2
Error in line 15: A494 S128 50,7
Error in line 21: sRJjLMq S128 93,82
Error in line 25: A494 S128 92,3
Error in line 12: sRJjLMq A13 26,4
Error in line 28: A494 A13 121,10
Error in line 32: kKXMMxFyC S128 2s2,8
Error in line 26: A494 A13 52,6
